get user followers
